@startuml

title __LONG_TERM_CA-CONTRACT's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.LongTermCAAdapter {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.LongTermCAServiceGrpc {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.LongTermCa {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingRequest {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    interface pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingRequestOrBuilder {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingResponse {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    interface pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingResponseOrBuilder {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityRequest {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    interface pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityRequestOrBuilder {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    class pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityResponse {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca.grpc {
    interface pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityResponseOrBuilder {
    }
  }
  

  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingRequest .up.|> pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingRequestOrBuilder
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingRequest -up-|> com.google.protobuf.GeneratedMessageV3
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingResponse .up.|> pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingResponseOrBuilder
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.PingResponse -up-|> com.google.protobuf.GeneratedMessageV3
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityRequest .up.|> pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityRequestOrBuilder
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityRequest -up-|> com.google.protobuf.GeneratedMessageV3
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityResponse .up.|> pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityResponseOrBuilder
  pt.ulisboa.tecnico.surespace.long_term_ca.grpc.RegisterEntityResponse -up-|> com.google.protobuf.GeneratedMessageV3


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
